@@ -6,9 +6,9 @@ module Lobbyist
       :website,:is_active, :abbreviated_name, :creation_date, :signup_admin_id, :signup_ip_addr,
       :account_terminated, :termination_date, :activation_code, :account_class, :promo_id,
       :average_score, :admin_notes, :customer_call_notes, :trial_source, :partner_id, :partner_account_id,
-      :last_synd_stat_date, :last_credit_grant, :send_transaction_receipts, :send_transaction_receipts_to,
-      :sales_status, :date_live, :country, :user_notes, :smart_invite, :enable_referral_marketing, :enable_retention_marketing,
-      :last_handwritten_review_credit_grant,:sugar_lead_id, :sugar_account_id, :sugar_opportunity_id, :company_info_changed,
+      :last_synd_stat_date, :last_credit_grant, :sales_status, :date_live, :country, :user_notes,
+      :smart_invite, :enable_referral_marketing, :enable_retention_marketing, :last_handwritten_review_credit_grant,
+      :sugar_lead_id, :sugar_account_id, :sugar_opportunity_id, :company_info_changed,
       :created_at, :updated_at, :status
 
     def setting
